--- a/src/Vistas/frmiAgregarJugador.form
+++ b/src/Vistas/frmiAgregarJugador.form
@@ -10,6 +10,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="closable" type="boolean" value="true"/>
+    <Property name="resizable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Agregar Jugador"/>
   </Properties>
   <SyntheticProperties>
