--- a/src/Vistas/frmiAgregarPatrocinio.form
+++ b/src/Vistas/frmiAgregarPatrocinio.form
@@ -9,6 +9,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="closable" type="boolean" value="true"/>
+    <Property name="resizable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Agregar Patrocinio"/>
   </Properties>
   <SyntheticProperties>
@@ -160,6 +161,7 @@
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnCargarMouseClicked"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCargarActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="cboSponsor">
